Add wisent manual to build process
* doc/misc/wisent.texi: Small edits.  Set copyright to FSF, update license to
GFDL 1.3+.

* doc/misc/Makefile.in (INFO_TARGETS, DVI_TARGETS, PDF_TARGETS): Add wisent.
(wisent, $(buildinfodir)/wisent$(INFO_EXT), wisent.dvi, wisent.pdf):
New targets.

* doc/misc/makefile.w32-in (INFO_TARGETS, DVI_TARGETS, clean): Add wisent.
($(infodir)/wisent$(INFO_EXT), wisent.dvi): New targets.

* info/dir: wisent.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2012-12-13  Glenn Morris  <rgm@gnu.org>
 
-	* info/dir: Add bovine.
+	* info/dir: Add bovine, wisent.
 
 2012-12-12  Andreas Schwab  <schwab@suse.de>
 
