--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/tramp-adb.el (tramp-adb-file-name-p): Make it a defsubst.
+	Otherwise, there could be errors in autoloading.  (Bug#13151)
+
 2012-12-13  Jürgen Hötzel  <juergen@archlinux.org>
 
 	* net/tramp-adb.el (tramp-adb-wait-for-output): Remove spurious " ^H"
