Include GFDL in org.texi
* org.texi (copying): Include a copy of the GFDL.
The old text said that it contained one (which was untrue), and
that one should be added if the manual was distributed separately,
which was logically inconsistent.
(GNU Free Documentation License): New section.

--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-14  Glenn Morris  <rgm@gnu.org>
+
+	* org.texi (copying): Include a copy of the GFDL.
+	(GNU Free Documentation License): New section.
+
 2012-12-13  Bastien Guerry  <bzg@gnu.org>
 
 	* org.texi: Fix typos.
