* fns.c (Fcompare_strings): Doc fix.
* strings.texi (Text Comparison): Doc fix for compare-strings.

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-15  Chong Yidong  <cyd@gnu.org>
+
+	* strings.texi (Text Comparison): Doc fix for compare-strings.
+
 2012-12-09  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* control.texi (Pattern matching case statement): New node.
