--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-20  Akinori MUSHA  <knu@iDaemons.org>  (tiny change)
+
+	* Makefile.in (install-arch-dep): Ignore chmod errors.  (Bug#13233)
+
 2012-12-13  Glenn Morris  <rgm@gnu.org>
 
 	* info/dir: Add bovine, wisent.
