--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-12-20  Bastien Guerry  <bzg@gnu.org>
+
+	* ldefs-boot.el (tags-search): Fix typo.
+
+	* progmodes/etags.el (tags-search): Fix typo.  Bug #13232.
+
 2012-12-11  Alan Mackenzie  <acm@muc.de>
 
 	Make CC Mode not hang when _some_ lines end in CRLF.  Bug #11841.
