--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-21  Chong Yidong  <cyd@gnu.org>
+
+	* customize.texi (Simple Types): Document key-sequence type
+	(Bug#13048).
+
 2012-12-15  Chong Yidong  <cyd@gnu.org>
 
 	* strings.texi (Text Comparison): Doc fix for compare-strings.
