--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-21  Chong Yidong  <cyd@gnu.org>
+
+	* frames.texi (Mouse Commands): Fix description of the effect of
+	mouse dragging (Bug#13049).
+
 2012-12-08  Dani Moncayo  <dmoncayo@gmail.com>
 
 	* killing.texi (Deletion): Doc fix (Bug#12748).
