--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-21  Chong Yidong  <cyd@gnu.org>
+
+	* sort.el (sort-subr): Doc fix (Bug#13056).
+
 2012-12-20  Bastien Guerry  <bzg@gnu.org>
 
 	* ldefs-boot.el (tags-search): Fix typo.
