--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,5 +1,7 @@
 2012-12-21  Chong Yidong  <cyd@gnu.org>
 
+	* modes.texi (Auto Major Mode): Fix typo (Bug#13230).
+
 	* customize.texi (Simple Types): Document key-sequence type
 	(Bug#13048).
 
