--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-21  Chong Yidong  <cyd@gnu.org>
+
+	* buffer.c (Fset_buffer_major_mode): Doc fix (Bug#13231).
+
 2012-12-15  Chong Yidong  <cyd@gnu.org>
 
 	* fns.c (Fcompare_strings): Doc fix (Bug#13081).
