--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,14 @@
+2012-12-21  Eli Zaretskii  <eliz@gnu.org>
+
+	* w32proc.c (new_child, delete_child, find_child_pid): For a
+	subprocess, consider its slot being in use as long as its process
+	handle (procinfo.hProcess) is not NULL.  This avoids reusing the
+	slot when a new process is started immediately after killing
+	another one, without waiting enough time for the first process to
+	be reaped and resources allocated for it be orderly freed.
+	(Bug#13086)
+	Suggested by Fabrice Popineau <fabrice.popineau@supelec.fr>.
+
 2012-12-21  Chong Yidong  <cyd@gnu.org>
 
 	* buffer.c (Fset_buffer_major_mode): Doc fix (Bug#13231).
