--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,7 @@
 2012-12-21  Eli Zaretskii  <eliz@gnu.org>
 
+	* fileio.c (Finsert_file_contents): Doc fix.
+
 	* w32proc.c (new_child, delete_child, find_child_pid): For a
 	subprocess, consider its slot being in use as long as its process
 	handle (procinfo.hProcess) is not NULL.  This avoids reusing the
