--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-21  Glenn Morris  <rgm@gnu.org>
+
+	* erc.texi: No need to include gpl in this small manual.
+
 2012-12-14  Glenn Morris  <rgm@gnu.org>
 
 	* org.texi (copying): Include a copy of the GFDL.
