--- a/doc/misc/auth.texi
+++ b/doc/misc/auth.texi
@@ -22,8 +22,7 @@ is included in the section entitled ``GNU Free Documentation License''
 in the Emacs manual.
 
 (a) The FSF's Back-Cover Text is: ``You have the freedom to copy and
-modify this GNU manual.  Buying copies from the FSF supports it in
-developing GNU and promoting software freedom.''
+modify this GNU manual.''
 
 This document is part of a collection distributed under the GNU Free
 Documentation License.  If you want to distribute this document
