--- a/doc/misc/gnus-coding.texi
+++ b/doc/misc/gnus-coding.texi
@@ -7,7 +7,7 @@
 @syncodeindex pg cp
 
 @copying
-Copyright @copyright{} 2004-2005, 2007-2012  Free Software
+Copyright @copyright{} 2004-2005, 2007-2012 Free Software
 Foundation, Inc.
 
 @quotation
@@ -20,8 +20,7 @@ license is included in the section entitled ``GNU Free Documentation
 License'' in the Gnus manual.
 
 (a) The FSF's Back-Cover Text is: ``You have the freedom to copy and
-modify this GNU manual.  Buying copies from the FSF supports it in
-developing GNU and promoting software freedom.''
+modify this GNU manual.''
 
 This document is part of a collection distributed under the GNU Free
 Documentation License.  If you want to distribute this document
