--- a/doc/misc/sasl.texi
+++ b/doc/misc/sasl.texi
@@ -10,8 +10,7 @@
 @copying
 This file describes the Emacs SASL library, version @value{VERSION}.
 
-Copyright @copyright{} 2000, 2004-2012
-Free Software Foundation, Inc.
+Copyright @copyright{} 2000, 2004-2012 Free Software Foundation, Inc.
 
 @quotation
 Permission is granted to copy, distribute and/or modify this document
@@ -23,8 +22,7 @@ is included in the section entitled ``GNU Free Documentation License''
 in the Emacs manual.
 
 (a) The FSF's Back-Cover Text is: ``You have the freedom to copy and
-modify this GNU manual.  Buying copies from the FSF supports it in
-developing GNU and promoting software freedom.''
+modify this GNU manual.''
 
 This document is part of a collection distributed under the GNU Free
 Documentation License.  If you want to distribute this document
