--- a/doc/misc/ede.texi
+++ b/doc/misc/ede.texi
@@ -88,6 +88,7 @@ learn and adopt GNU ways of doing things.
 * Building and Debugging::      Initiating a build or debug session.
 * Miscellaneous commands::      Other project related commands.
 * Extending EDE::               Programming and extending @ede{}.
+* GNU Free Documentation License::  The license for this documentation.
 @end menu
 
 @node EDE Project Concepts, EDE Mode, top, top
@@ -1092,7 +1093,7 @@ You can add your own locate tool but subclassing from
 methods.  See the code in @file{ede-locate.el} for GNU Global as a
 simple example.
 
-@node Extending EDE,  , Miscellaneous commands, top
+@node Extending EDE, GNU Free Documentation License, Miscellaneous commands, top
 @chapter Extending @ede{}
 
 This chapter is intended for users who want to write new parts or fix
@@ -4435,5 +4436,9 @@ For example, C code uses .o on unix, and Emacs Lisp uses .elc.
 
 @end table
 @end table
+
+@node GNU Free Documentation License, , Extending EDE, Top
+@appendix GNU Free Documentation License
+@include doclicense.texi
 
 @bye
