--- a/doc/misc/mairix-el.texi
+++ b/doc/misc/mairix-el.texi
@@ -60,6 +60,7 @@ database.
 * Setting up mairix.el::        Set up mairix.el
 * Using mairix.el::             List of interactive functions
 * Extending mairix.el::         Support your favorite mail reader!
+* GNU Free Documentation License::  The license for this documentation.
 @end menu
 
 @node About mairix and mairix.el
@@ -345,6 +346,8 @@ Then add the functions to @code{mairix-display-functions} and
 
 And that's it!
 
-
+@node GNU Free Documentation License
+@appendix GNU Free Documentation License
+@include doclicense.texi
 
 @bye
