--- a/doc/misc/gnus-coding.texi
+++ b/doc/misc/gnus-coding.texi
@@ -14,18 +14,12 @@ Foundation, Inc.
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.3 or
 any later version published by the Free Software Foundation; with no
-Invariant Sections, with the Front-Cover texts being ``A GNU
-Manual'', and with the Back-Cover Texts as in (a) below.  A copy of the
-license is included in the section entitled ``GNU Free Documentation
-License'' in the Gnus manual.
+Invariant Sections, with the Front-Cover texts being ``A GNU Manual'',
+and with the Back-Cover Texts as in (a) below.  A copy of the license
+is included in the section entitled ``GNU Free Documentation License''.
 
 (a) The FSF's Back-Cover Text is: ``You have the freedom to copy and
 modify this GNU manual.''
-
-This document is part of a collection distributed under the GNU Free
-Documentation License.  If you want to distribute this document
-separately from the collection, you can do so by adding a copy of the
-license to the document, as described in section 6 of the license.
 @end quotation
 @end copying
 
@@ -53,6 +47,7 @@ This manual describes @dots{}
 @menu
 * Gnus Coding Style:: Gnus Coding Style
 * Gnus Maintenance Guide:: Gnus Maintenance Guide
+* GNU Free Documentation License::  The license for this documentation.
 @end menu
 
 @c @ref{Gnus Reference Guide, ,Gnus Reference Guide, gnus, The Gnus Newsreader}
@@ -385,6 +380,10 @@ If the variable is new in No Gnus use @code{:version "23.1" ;; No Gnus}.
 
 The same applies for customizable variables when its default value was
 changed.
+
+@node GNU Free Documentation License
+@appendix GNU Free Documentation License
+@include doclicense.texi
 
 @c Local Variables:
 @c mode: texinfo
