--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-21  Glenn Morris  <rgm@gnu.org>
+
+	* emacs-xtra.texi (copying): The FSF does not sell copies of this.
+	Simply include doclicense.
+
 2012-12-21  Chong Yidong  <cyd@gnu.org>
 
 	* frames.texi (Mouse Commands): Fix description of the effect of
