--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-22  Martin Rudalics  <rudalics@gmx.at>
+
+	* windows.texi (Selecting Windows): Reword description of
+	select-window (Bug#13248).
+
 2012-12-21  Chong Yidong  <cyd@gnu.org>
 
 	* modes.texi (Auto Major Mode): Fix typo (Bug#13230).
