--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-22  Martin Rudalics  <rudalics@gmx.at>
+
+	* window.c (Fselect_window): Reword doc-string (Bug#13248).
+
 2012-12-21  Eli Zaretskii  <eliz@gnu.org>
 
 	* fileio.c (Finsert_file_contents): Doc fix.
