--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,8 +1,8 @@
 2012-12-22  Glenn Morris  <rgm@gnu.org>
 
 	* ada-mode.texi, ebrowse.texi, ediff.texi, ert.texi, eshell.texi:
-	* eudc.texi, idlwave.texi, rcirc.texi, remember.texi, ses.texi:
-	* speedbar.texi, vip.texi, viper.texi, widget.texi:
+	* eudc.texi, idlwave.texi, pcl-cvs.texi, rcirc.texi, remember.texi:
+	* ses.texi, speedbar.texi, vip.texi, viper.texi, widget.texi:
 	Nuke hand-written node pointers.
 
 	* Makefile.in (gfdl): New variable.  Use throughout where
