Fix some doc/misc cross-references to separate manuals.

--- a/doc/misc/bovine.texi
+++ b/doc/misc/bovine.texi
@@ -138,7 +138,7 @@ of simplified Emacs Lisp expressions for concocting the parse tree.
 In bison, each time an element of @var{components} is found, it is
 @dfn{shifted} onto the parser stack.  (The stack of matched elements.)
 When all @var{components}' elements have been matched, it is
-@dfn{reduced} to @var{result}.  @xref{(bison)Algorithm}.
+@dfn{reduced} to @var{result}.  @xref{Algorithm,,, bison, The GNU Bison Manual}.
 
 A particular @var{result} written into your grammar becomes
 the parser's goal.  It is designated by a @code{%start} statement
