--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,5 +1,8 @@
 2012-12-22  Glenn Morris  <rgm@gnu.org>
 
+	* autotype.texi, bovine.texi, ede.texi, eieio.texi, pcl-cvs.texi:
+	Fix cross-references to separate manuals.
+
 	* Makefile.in (gfdl): New variable.  Use throughout where
 	appropriate so that targets depend on doclicense.texi.
 
