--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,5 +1,7 @@
 2012-12-22  Glenn Morris  <rgm@gnu.org>
 
+	* auth.texi (Help for users): Break long lines.
+
 	* ada-mode.texi (Project file variables):
 	Reword to reduce underfull hbox.
 	(No project files, Use GNAT project file):
