--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,5 +1,8 @@
 2012-12-22  Glenn Morris  <rgm@gnu.org>
 
+	* wisent.texi (Wisent Overview): Fix xref.
+	(Grammar format, Understanding the automaton): Avoid overfill.
+
 	* bovine.texi (Optional Lambda Expression): Allow line break.
 
 	* auth.texi (Help for users): Break long lines.
