--- a/lisp/gnus/ChangeLog
+++ b/lisp/gnus/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-23  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* shr.el (shr-tag-em): Render as italic, not bold.
+
 2012-12-02  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* gnus-sum.el (gnus-summary-mode-map): Bind gnus-summary-widget-forward
