--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-24  Dmitry Gutov  <dgutov@yandex.ru>
+
+	* progmodes/ruby-mode.el: Bump the version to 1.2 (Bug#13200).
+
 2012-12-23  Alan Mackenzie  <acm@muc.de>
 
 	Speed up fontification where there's large brace blocks.
