--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-24  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* configure.ac (SIGNALS_VIA_CHARACTERS): Also define for darwin.
+	(Bug#13222)
+
 2012-12-20  Akinori MUSHA  <knu@iDaemons.org>  (tiny change)
 
 	* Makefile.in (install-arch-dep): Ignore chmod errors.  (Bug#13233)
