--- a/lisp/gnus/ChangeLog
+++ b/lisp/gnus/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-24  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* nnimap.el (nnimap-find-article-by-message-id): Don't error out if
+	group is nil.
+
 2012-12-23  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* shr.el (shr-tag-em): Render as italic, not bold.
