--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-26  Dmitry Gutov  <dgutov@yandex.ru>
+
+	* automated/ruby-mode-tests.el
+	(ruby-indent-after-block-in-continued-expression): New test.
+
 2012-10-14  Eli Zaretskii  <eliz@gnu.org>
 
 	* automated/compile-tests.el (compile-tests--test-regexps-data):
